--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -620,3 +620,19 @@ body {
   .ant-menu-item a:hover {
     text-decoration: none !important;
   }
+
+  .input-currency-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.currency-symbol {
+  position: absolute;
+  left: 10px;
+  z-index: 1;
+}
+
+.currency-input {
+  padding-left: 30px !important;
+}
